--- a/result.html
+++ b/result.html
@@ -67,7 +67,7 @@
             resultHeading.textContent = 'Sorry!';
             resultMessage.textContent = `You scored ${score}%.Unfortunately, you have failed the exam. Please reappear for the exam..`;
             actionButton.textContent = 'Retry';
-            actionButton.href = 'payment_page.html';
+            actionButton.href = 'index.html';
         }
     </script>
 </body>
