--- a/payment.html
+++ b/payment.html
@@ -237,17 +237,17 @@
     </div>
     <div class="flex m20">
         <label>WHATAPP NUMBER (FOR THE DELIVERY OF CERTIFICATE)*</label>
-        <input type="text" name="upi" placeholder="Ex- UPI ID" class="m10 number" required>
+        <input type="text" name="upi" placeholder="+919191919191" class="m10 number" required>
         <div class="error">This field is required</div>
     </div>
     <div class="flex m20">
         <label>Email ID*</label>
-        <input type="text" name="connex_email" placeholder="Ex- your.email@example.com" class="m10 connex_email" required>
+        <input type="text" name="connex_email" placeholder="your.email@example.com" class="m10 connex_email" required>
         <div class="error">This field is required</div>
     </div>
     <div class="flex m20">
         <label>UPI ID which you will use for payment*</label>
-        <input type="email" name="email" placeholder="Email" class="m10 email" required>
+        <input type="email" name="email" placeholder="upi (all types of upi accepted)" class="m10 email" required>
         <div class="error email-error" style="display:none;">Please enter a valid email address</div>
     </div>
     <div class="flex m20">
