--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 <body>
     <div class="container">
         <h1>Cash Flow Management Quiz</h1>
+        <p>scroll down total 10 questions ↓</p>
         <div id="timer">Time left: <span id="timerValue">15:00</span></div>
 
         <form id="quizForm">
